Revision history for perl module Git-Hooks. -*- text -*-

{{$NEXT}}

[Improvements]

  - Add POD spelling tests and fix some typos.

  - Document the version after which deprecated options were deprecated.

3.3.0     2022-06-11 16:43:20-03:00 America/Sao_Paulo

[New features]

  - The new githooks.timeout configuration option adds timeout support. It sets
    a time limit to how log the hooks can run. If it runs longer than the
    specified time, in seconds, it aborts.

  - The new githooks.error-length-limit configuration option specifies a limit
    to the length of the error messages in characters. If the errors are bigger
    than the limit the message is truncated and a special mark is appended to
    the end.

[Fixes]

  - CheckLog: The checklog.spelling tests weren't being skipped correctly which
    made them fail on FreeBSD systems.

3.2.2     2022-06-04 17:20:26-03:00 America/Sao_Paulo

[Fixes]

  - CheckCommit: Fix calls to the check_post_commit and check_patchset which
    were being passed SHA1 hashes intead of commit objects.

  - Avoid showing some expected Git error messages.

  - CheckWhiteSpace: Fix "Exiting subroutine via next" errors.

  - CheckLog: Fix spellcheck test.

  - Now we grok Bitbucket's repository name from the newer BB_REPO_SLUG
    environment variable instead of the old STASH_REPO_NAME environment
    variable.

3.2.1     2022-01-02 21:08:19-03:00 America/Sao_Paulo

[Fixes]

  - CheckLog: The check_ref routine was returning a boolean instead of the
    number of errors found. This was inverting its result.

  - CheckCommit: The 'signature' configuration option wasn't working.

  - The Git::Hooks::Test module wasn't isolating Git from the user's
    environment, which led it to fail strangely in situations where the test
    code interacted destructively with the user's global configuration or the
    system's configuration.

  [Thanks]

  Mikko Koivunalho provided all three fixes.
