@@ -4,9 +4,18 @@ Revision history for perl module Git-Hooks. -*- text -*-
 
 [Improvements]
 
+  - Extends the githooks.plugin option with the ability to disable a plugin by
+    prefixing its name with an exclamation point. This allows one to disable a
+    plugin and re-enable it later, which wasn't possible before.
+
   - Add POD spelling tests and fix some typos.
 
   - Document the version after which deprecated options were deprecated.
+
+[Deprecations]
+
+  - The githooks.disable option is being deprecated in favor of the extended
+    githooks.plugin option.
 
 3.3.0     2022-06-11 16:43:20-03:00 America/Sao_Paulo
 
